# car_vs_ambulance_classification_ensemble_cnn

./: .dvcignore  .gitignore  Dockerfile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: pylint.yml
config/: config.yaml
models/: .gitignore  tuned_hyperparams.json
notebooks/: 1_ProcessingData.ipynb  2_TrainModels.ipynb  3_Evaluate.ipynb
src/evaluate/: ensemble_stratedy.py
src/models/: base_model.py  lenet.py  mini_vgg_net.py  shallownet.py
src/report/: .gitignore  mini_vgg_net_metrics.json  plotter.py.dvc
src/stages/: stage_00_data_download.py  stage_0_data_download.py  stage_1_data_preprocess_augmentation.py  stage_2_train.py  stage_3_evaluate.py
src/train/: train.py
src/utils/: image_data_loader.py  utilities.py  utils.py
