[tool.poetry]
name = "car_vs_ambulance_classification_ensemble_cnn"
version = "0.1.0"
description = ""
authors = ["vivekpatel99 <vivpatel99@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python  = "*"
scikit-image = "*"
pillow = "*"
imutils = "*"
scikit-learn = "*"
matplotlib = "*"
progressbar2 = "*"
pandas = "*"
opendatasets = "*"
dvc = "^3.55.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


